# xm_velocity_smoother

./: CMakeLists.txt  README.txt  package.xml
cfg/: params.cfg
include/xm_velocity_smoother/: velocity_smoother_nodelet.hpp
launch/: standalone.launch  test_translational_smoothing.launch  velocity_smoother.launch
param/: standalone.yaml
plugins/: nodelets.xml
src/: velocity_smoother_nodelet.cpp
test/: test_translational_input.py
